subprojects/ere/ere/tests/ui/engine_one_pass_not_applicable.rs
use ere::regex;

fn main() {
    #[regex(r"(a+)(a+)", engine = OnePassU8)]
    struct Greedy<'a>(&'a str, &'a str, &'a str);

    let _ = Greedy::exec("aaa");
}
